--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
-	"name": "fcc-learn-npm-package-json",
 	"author": "Andrea Maccan",
+	"description": "This is a description example",
+	"keywords": [
+		"freecodecamp",
+		"fcc",
+		"challenges",
+		"npm",
+		"APIs and Microservices"
+	],
+	"license": "GPL",
+	"version": "1.0.0",
+	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
